--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div>
         <h2>Hello, How are you ?</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus veniam corporis suscipit adipisci sit cumque, esse voluptates velit nemo architecto, quod asperiores, iure nihil illo non quibusdam consequatur. Dolorum, reiciendis.</p>
+        <p>Namrata  video kab send karogi</p>
     </div>
 </body>
 </html>
